ros_v2X_apps_humble/dev_ws/log/build_2026-05-05_15-21-10/v2x_apps/stderr.log
  File "/home/cube/cube-its/dev_ws/install/v2x_apps/lib/python3.10/site-packages/v2x_apps/cpm_bridge.py", line 96
    p_max = np.max(p²oints, axis=0)
                    ^
SyntaxError: invalid character '²' (U+00B2)

